Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8073

Shell Image Viewer crashes the explorer under Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Shell

    Description

      As mentioned by thfabba in CORE-7740, shimgvw.dll from ReactOS crashes the Explorer under Windows
      (I get it when replacing the Windows one with the one from ReactOS and change to a folder that contains pictures).

      The attatched patch replaces the autogenerated stubs for DllRegisterServer(), DllUnregisterServer(), DllGetClassObject() and DllCanUnloadNow() and instead gives them a normal implementation in the Image Viewer's source code. They are still do nothing besides return a appropriate value, but this should hopefully get rid of the explorer crash.

      Attachments

        Issue Links

          Activity

            People

              AmineKhaldi AmineKhaldi
              Forever Winter Forever Winter
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: