[SHIMGVW] Fix DLL stubs, intended to fix a crash on Windows. Patch by Ricardo Hanke. CORE-8073 #resolve #comment Committed in r65614. Thanks!

svn path=/trunk/; revision=65614